--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,7 +13,7 @@ body {
     background: #E2E4E7;
     padding: 0;
     text-align: center;
-    font-family: 'open sans', cursive;https://heroku.com
+    font-family: 'open sans', cursive;
     position: relative;
     margin: 0;
     height: 100%;
@@ -378,3 +378,4 @@ body.disabled-onepage-scroll .main section.page3 .page_container {
     margin-right: auto;
     right: 0;
 }
+
